--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -176,6 +176,21 @@ As field names specific to a sample are made by appending with -samplename, some
 count($sequenced-*, == "v")
 will give the number of samples for which a variant was found
 
+=== Sample aggregates ===
+Sometimes you want summary info for each (selected) variation over the samples in the file 
+(e.g. in how many samples is the variant present, in which samples, ..). 
+You can do this in a limited way using the previous count functions using an asterix.
+Sample aggregate functions are a much more flexible way to do this. In the arguments 
+of the function, you can use variable names without the sample part, which will then be added for each sample,
+e.g. scount($sequenced == "v") will count the number of samples for which sequenced-<sample> is equal to "v"
+A special variable named sample is available with the name of the sample, e.g.
+scount($sample match "gatk-*" and $sequenced == "v") will count the number of 
+gatk samples (sample name matches gatk-*) for which sequenced-<sample> is equal to "v"
+Following sample aggregates are available:
+; **scount(condition)**: number of samples for which **condition** is true
+; **slist(value)**: returns a (comma separated) list with result of the formula given by value for each sample
+; **slist(condition,value)**: returns a (comma separated) list with result of value for each sample for which **condition** is true
+
 === comparing samples ===
 
 ; **same(sample1,sample2, ...)**: same: all samples have the same genotype (does not have to be a variant) (all sequenced)
