--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -167,7 +167,7 @@ The default value for non-numeric arguments can be set e.g. to 1000 by giving de
 ; **regexp(value,pattern)**: true if value matches the regular expression given by **pattern**
 ; **matches(value,pattern)**:  true if value matches the glob pattern given by **pattern** 
 (using wildcards * for anything, ? for any single character, [chars] for any of the characters in chars)
-; **concat(separator,value,...)**: makes one long string by appending all values, separated by **separator**.
+; **concat(value,...)**: makes one long string by appending all values.
 === multifield functions ===
 The following functions address multiple fields.
 
