--- a/lib/cg_exportplink.wiki
+++ b/lib/cg_exportplink.wiki
@@ -34,4 +34,4 @@ You can use plink to recode to the default plink format (non-tansposed)
 included in the result.
 
 == Category ==
-Convert
+Conversion
